--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Gita nd Github Crash Course</title>
 </head>
 <body>
+    <section>
+<p>
     <h1>Git & Github Crash Course</h1>
     <p>Because the basics are important</p>
+</section>
+</p>
 </body>
 </html>
