--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
 <p>
     <h1>Git & Github Crash Course</h1>
-    <p>Because the basics are important</p>
+    <p>Because the basics are important!!!</p>
 </section>
 </p>
 </body>
